@startuml

title __BEHAVIOR DESIGN's Class Diagram__\n

  namespace  {
    class AlphabetSubscriber {
    }
  }
  

  namespace  {
    class StringPublisher {
    }
  }
  

  namespace  {
    abstract class StringSubScription {
    }
  }
  

  namespace  {
    abstract class StringSubscriber {
    }
  }
  

  namespace  {
    class main {
    }
  }
  

  AlphabetSubscriber -up-|> StringSubscriber
  StringPublisher .up.|> java.util.concurrent.Flow.Publisher
  StringPublisher -up-|> StringSubScription
  StringSubScription .up.|> java.util.concurrent.Flow.Subscription
  StringSubscriber .up.|> java.util.concurrent.Flow.Subscriber
  StringSubscriber -up-|> StringSubScription


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
